--- a/index.html
+++ b/index.html
@@ -44,26 +44,26 @@
 <h3 class="main-title">Beats</h3>
 <div class="search-filters-container">
 <select name="genres" id="genres">
-<option value="confident">confident</option>
-<option value="confident">confident</option>
-<option value="confident">confident</option>
-<option value="confident">confident</option>
-</select>
-<select name="genres" id="genres">
-<option value="confident">confident</option>
-<option value="confident">confident</option>
+<option value="confident">calm</option>
+<option value="confident">Calm</option>
 <option value="confident">confident</option>
 <option value="confident">confident</option>
 </select>
 <select name="genres" id="genres">
 <option value="confident">confident</option>
-<option value="confident">confident</option>
+<option value="confident">calm</option>
 <option value="confident">confident</option>
 <option value="confident">confident</option>
 </select>
 <select name="genres" id="genres">
 <option value="confident">confident</option>
+<option value="confident">calm</option>
 <option value="confident">confident</option>
+<option value="confident">confident</option>
+</select>
+<select name="genres" id="genres">
+<option value="confident">sort by</option>
+<option value="confident">calm</option>
 <option value="confident">confident</option>
 <option value="confident">confident</option>
 </select>
