almost completed the shopping cart design

--- a/index.html
+++ b/index.html
@@ -387,7 +387,15 @@
     <p class="product-title">Beat and song1</p> 
      <h5 class="product-price">$30</h5>
    </div>
-</div>    
+</div> 
+   <div class="checkout-container">
+    <div class="total-price">
+    <h4>Total</h4>
+    <h4>$ <span class="total-price-value">50</span></h4>
+    </div>
+    <button class="checkout-btn">Proceed to Checkout</button>
+   </div>
 </div>
 
+<script src="./scripts/index.js"></script>
 </body>
