--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <img src="./img/navvys-logo.png" alt="" class="logo">
 
         <div class="nav-right">
-        <div class="cart-count-container">
+        <div class="cart-count-container cart-count-icon">
          <span class="shopping-cart-count">1</span>   
         <i class="fa fa-shopping-cart"></i>
          </div>    
@@ -391,7 +391,7 @@
    <div class="checkout-container">
     <div class="total-price">
     <h4>Total</h4>
-    <h4>$ <span class="total-price-value">50</span></h4>
+    <h4>$ <span class="total-price-value">120</span></h4>
     </div>
     <button class="checkout-btn">Proceed to Checkout</button>
    </div>
