added licenses overlay

--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
     </div> 
 </div>
 
-
+<section class="cart">
 <div class="shopping-cart-container">
    <button class="close-cart-btn">
     <i class="fas fa-times close-cart"></i>
@@ -397,5 +397,58 @@
    </div>
 </div>
 
+<div class="licenses-container">
+<div class="licenses-overlay ">
+<button class="close-overlay-btn close-overlay-btn">
+ <i class="fas fa-times"></i>
+</button>
+<div class="album-art-container">
+<div class="album-art-img-container">
+<img src="./img/red bg.jpg" alt="">
+</div>
+<p class="beat-title">beat1 sunshine cool beat</p>
+</div>
+<div class="license-details-container">
+    <div class="license-details">
+      <p class="license-title">Basic</p>
+      <h5 class="item-price">
+        <i class="fa fa-shopping-cart"></i>
+         $<span>50</span>
+        </h5>
+    </div>
+      <div class="license-terms">
+        <i class="fa fa-chevron-down" aria-hidden="true"></i>
+        <p> View license terms</p>
+      </div>
+ </div>
+ <div class="license-details-container">
+    <div class="license-details">
+      <p class="license-title">Premium</p>
+      <h5 class="item-price">
+        <i class="fa fa-shopping-cart"></i>
+         $<span>100</span>
+        </h5>
+    </div>
+      <div class="license-terms">
+        <i class="fa fa-chevron-down" aria-hidden="true"></i>
+        <p> View license terms</p>
+      </div>
+ </div> 
+ <div class="license-details-container">
+    <div class="license-details">
+      <p class="license-title">Premium plus</p>
+      <h5 class="item-price">
+        <i class="fa fa-shopping-cart"></i>
+         $<span>150</span>
+        </h5>
+    </div>
+      <div class="license-terms">
+        <i class="fa fa-chevron-down" aria-hidden="true"></i>
+        <p> View license terms</p>
+      </div>
+ </div>
+</div>
+</div>
+</section>
 <script src="./scripts/index.js"></script>
 </body>
