--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
 </div>
 
 <section class="cart">
-<div class="shopping-cart-container">
+<div class="shopping-cart-container close-entire-cart">
    <button class="close-cart-btn">
     <i class="fas fa-times close-cart"></i>
    </button> 
