added js for opening and closing audio player, licenses-overlay

--- a/index.html
+++ b/index.html
@@ -333,17 +333,24 @@
     </div>
 </section>
 
+
 <div class="audio-player-container">
     <div class="audio-progress-bar"></div>
+    <div class="audio-player-album-art">
+    <i class="fas fa-play"></i> 
     <img src="./img/red bg.jpg" alt="" class="beat-icon">
-    <p class="audio-title"> Evening chill beat</p>
+    </div>
+    <p class="audio-title"> Evening chill beat -mp3</p>
     <div class="controls-audio">
         <i class="fa fa-share-alt"></i>
         <i class="fas fa-step-backward audio-prev-btn"></i> 
         <i class="fas fa-play audio-play-btn fa-lg"></i> 
         <i class="fas fa-step-forward audio-next-btn"></i> 
     </div> 
+    <i class="fas fa-times close-audio-player-btn"></i>
+
 </div>
+
 
 <section class="cart">
 <div class="shopping-cart-container close-entire-cart">
@@ -404,9 +411,10 @@
 </button>
 <div class="album-art-container">
 <div class="album-art-img-container">
+<i class="fas fa-play audio-play-btn-license-popup"></i> 
 <img src="./img/red bg.jpg" alt="">
 </div>
-<p class="beat-title">beat1 sunshine cool beat</p>
+<p class="beat-title">beat1 sunshine cool beat -mp3</p>
 </div>
 <div class="license-details-container">
     <div class="license-details">
