--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
     <i class="fas fa-play"></i> 
     <img src="./img/red bg.jpg" alt="" class="beat-icon">
     </div>
-    <p class="audio-title"> Evening chill beat -mp3</p>
+    <p class="audio-title"> Evening chill beat</p>
     <div class="controls-audio">
         <i class="fa fa-share-alt"></i>
         <i class="fas fa-step-backward audio-prev-btn"></i> 
