--- a/index.html
+++ b/index.html
@@ -342,9 +342,9 @@
     </div>
     <p class="audio-title"> Evening chill beat</p>
     <div class="controls-audio">
-        <i class="fa fa-share-alt"></i>
+        <!-- <i class="fa fa-share-alt"></i> -->
         <i class="fas fa-step-backward audio-prev-btn"></i> 
-        <i class="fas fa-play audio-play-btn fa-lg"></i> 
+        <i class="fas fa-play audio-play-btn"></i> 
         <i class="fas fa-step-forward audio-next-btn"></i> 
     </div> 
     <i class="fas fa-times close-audio-player-btn"></i>
