fixing logical errors

--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
 <div class="license-details-container">
     <div class="license-details">
       <p class="license-title">Basic</p>
-      <h5 class="item-price">
+      <h5 class="item-price license-specific-price">
         <i class="fa fa-shopping-cart"></i>
          $<span>50</span>
         </h5>
@@ -432,7 +432,7 @@
  <div class="license-details-container">
     <div class="license-details">
       <p class="license-title">Premium</p>
-      <h5 class="item-price">
+      <h5 class="item-price license-specific-price">
         <i class="fa fa-shopping-cart"></i>
          $<span>100</span>
         </h5>
@@ -445,10 +445,10 @@
  <div class="license-details-container">
     <div class="license-details">
       <p class="license-title">Premium plus</p>
-      <h5 class="item-price">
+      <h5 class="item-price license-specific-price">
         <i class="fa fa-shopping-cart"></i>
          $<span>150</span>
-        </h5>
+     </h5>
     </div>
       <div class="license-terms">
         <i class="fa fa-chevron-down" aria-hidden="true"></i>
