fixed the bugs of adding items to cart

--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
     <h4>product</h4>
     <h4>product Name</h4>
     <div>Price</div>
+    <div></div>
   </div>
 
   <div class="cart-items-container">
@@ -120,6 +121,7 @@
    </div>
    <p class="product-title">Beat and song1</p> 
     <h5 class="product-price">$30</h5>
+    <i class="fas fa-times remove-cart-item-btn"></i>
   </div>
   <div class="cart-items-container">
     <div class="cart-image">
@@ -127,6 +129,7 @@
     </div>
     <p class="product-title">Beat and song1</p> 
      <h5 class="product-price">$30</h5>
+    <i class="fas fa-times remove-cart-item-btn"></i>
    </div>
    
    <div class="cart-items-container">
@@ -135,6 +138,8 @@
     </div>
     <p class="product-title">Beat and song1</p> 
      <h5 class="product-price">$30</h5>
+    <i class="fas fa-times remove-cart-item-btn"></i>
+
    </div>
 
    <div class="cart-items-container">
@@ -143,6 +148,7 @@
     </div>
     <p class="product-title">Beat and song1</p> 
      <h5 class="product-price">$30</h5>
+    <i class="fas fa-times remove-cart-item-btn"></i>
    </div>
 </div> 
    <div class="checkout-container">
