added all the math necessary for the shopping cart to work

--- a/index.html
+++ b/index.html
@@ -114,24 +114,7 @@
     <div>Price</div>
     <div></div>
   </div>
-
-  <div class="cart-items-container">
-   <div class="cart-image">
-    <img src="./img/red bg.jpg" alt="">
-   </div>
-   <p class="product-title">Beat and song1</p> 
-    <h5 class="product-price">$30</h5>
-    <i class="fas fa-times remove-cart-item-btn"></i>
-  </div>
-  <div class="cart-items-container">
-    <div class="cart-image">
-     <img src="./img/red bg.jpg" alt="">
-    </div>
-    <p class="product-title">Beat and song1</p> 
-     <h5 class="product-price">$30</h5>
-    <i class="fas fa-times remove-cart-item-btn"></i>
-   </div>
-   
+<!-- 
    <div class="cart-items-container">
     <div class="cart-image">
      <img src="./img/red bg.jpg" alt="">
@@ -139,22 +122,12 @@
     <p class="product-title">Beat and song1</p> 
      <h5 class="product-price">$30</h5>
     <i class="fas fa-times remove-cart-item-btn"></i>
-
-   </div>
-
-   <div class="cart-items-container">
-    <div class="cart-image">
-     <img src="./img/red bg.jpg" alt="">
-    </div>
-    <p class="product-title">Beat and song1</p> 
-     <h5 class="product-price">$30</h5>
-    <i class="fas fa-times remove-cart-item-btn"></i>
-   </div>
+   </div> -->
 </div> 
    <div class="checkout-container">
     <div class="total-price">
     <h4>Total</h4>
-    <h4>$ <span class="total-price-value">120</span></h4>
+    <h4>$ <span class="total-price-value"> </span></h4>
     </div>
     <button class="checkout-btn">Proceed to Checkout</button>
    </div>
